Fix z-indexes

--- a/app/styles/constants/z-index.scss
+++ b/app/styles/constants/z-index.scss
@@ -1,7 +1,7 @@
 
-$z-index-header: 1000;
+$z-index-header: 4000;
 $z-index-conversation-host: 1001;
-$z-index-page-sticky: 3000;
+$z-index-page-sticky: 1000;
 
 $z-index-modal-backdrop: 1020;
 $z-index-modal: 1021;
